fixed spacing around NY image

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -38,7 +38,7 @@ main {
 }
 
 .spacer1 {
-  margin-top: 30vh; /* Default for desktop */
+  margin-top: 0vh; /* Default for desktop */
 }
 
 /*
@@ -53,7 +53,8 @@ section {
 
   }
   .spacer1 {
-    margin-top: 25vh; /* Default for desktop */
+    margin-top: 2vh; /* Default for desktop */
+    margin-bottom: 5vh; /* Default for desktop */
    
   }
 }
